TDP-2414: add  height to fix bug on IE

--- a/dataprep-webapp/src/app/components/preparation/creator/_preparation-creator.scss
+++ b/dataprep-webapp/src/app/components/preparation/creator/_preparation-creator.scss
@@ -50,7 +50,7 @@
     }
 
     .inventory-list {
-        max-height: 45vh;
+        height: 45vh;
         overflow-y: auto;
 
         .inventory-item-row {
